--- a/style.css
+++ b/style.css
@@ -117,6 +117,9 @@ ul,ol,li{
     margin: 0 auto 30px;
 }
 
+.march{
+    margin-bottom: 20px;
+}
 
 
 /* 760px 이상 (Desktop) */
@@ -145,6 +148,9 @@ ul,ol,li{
    }
 
    /* gangneung */ 
+   .march{
+       display: none;
+   }
    .gangneung2-img{
        width: 300px;
        height: 400px;
@@ -158,7 +164,7 @@ ul,ol,li{
    .gangneung5-img{
     width: 300px;
     height: 400px;
-}
+   }
 
 }
 
