--- a/style.css
+++ b/style.css
@@ -82,7 +82,6 @@ ul,ol,li{
     background-color: #FDDED8;
     padding-top: 30px;
     text-align: center;
-
 }
 
 .gangneung-title{
@@ -121,6 +120,47 @@ ul,ol,li{
     margin-bottom: 20px;
 }
 
+.march h2{
+    color: hotpink;
+}
+
+/* chuncheon */
+.chuncheon{
+    background-color: #f5cbcb;
+}
+
+.april{
+    color: indianred;
+    margin-bottom: 20px;
+}
+
+.chuncheon-title{
+    display: block;
+    font-size: 20px;
+    margin-bottom: 8px;
+}
+
+.chuncheon{
+    text-align: center;
+    padding-top: 30px;
+}
+.chuncheon1-img{
+    display: block;
+    width: 250px;
+    height: auto;
+    border-radius: 20px;
+    margin: 0 auto 30px;
+}
+
+.chuncheon2-img{
+    display: block;
+    width: 250px;
+    height: auto;
+    border-radius: 20px;
+    margin: 0 auto 30px;
+}
+
+
 
 /* 760px 이상 (Desktop) */
 @media screen and (min-width: 760px) {
@@ -144,6 +184,12 @@ ul,ol,li{
 
    .me:hover{
         box-shadow: 0 10px 16px rgb(81, 16, 146, 0.85);
+   }
+
+   .text{
+       display: flex;
+       flex-direction: row;
+       justify-content: flex-start;
    }
 
    /* gangneung */ 
@@ -179,6 +225,21 @@ ul,ol,li{
    .gangneung5-img:hover{
        box-shadow: 0 10px 16px rgba(204, 68, 111, 0.85);
    }
+
+   /* chuncheon */
+   .april{
+       display: none;
+   }
+
+   .chuncheon1-img{
+       width: 400px;
+       height: auto;
+   }
+
+   .chuncheon2-img{
+    width: 400px;
+    height: auto;
+}
 
 }
 
