--- a/style.css
+++ b/style.css
@@ -242,6 +242,41 @@ ul,ol,li{
     margin: 0 auto 30px;
 }
 
+/* footer */
+.footer{
+    background-color: #F4F4F4;
+}
+
+.facebook{
+    display: block;
+    width: 50px;
+    height: 50px;
+    border-radius: 20px;
+    margin-right: 40px;
+}
+
+.instagram{
+    display: block;
+    width: 50px;
+    height: 50px;
+    border-radius: 20px;
+    margin-right: 40px;
+}
+
+.blog{
+    display: block;
+    width: 50px;
+    height: 50px;
+    border-radius: 20px;
+}
+
+.icon{
+    display: flex;
+    justify-content: center;
+    margin: 20px 0;
+}
+
+
 
 
 /* 760px 이상 (Desktop) */
